# wi-news

./: README.md  pyproject.toml
notebooks/: classification.ipynb  hashtags_extraction.ipynb  hashtags_extraction_and_news_sorting.ipynb
wi_news/: __init__.py  server.py
wi_news/algorithms/: __init__.py  clustering.py  get_news.py  hashtags_extraction.py  sort_news.py  vectorization.py
wi_news/algorithms/classification/: __init__.py  clf.pkl  prep.pkl
wi_news/algorithms/hashtags/: __init__.py  cosine.py  tf_idf.py
wi_news/server/: __init__.py
wi_news/server/static/: index.html
