[tool.poetry]
name = "wi-news"
version = "0.1.0"
description = "A news platform."
authors = ["Anthony Chow <mrchowpoor@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
spacy = "^3.7.4"
sentence-transformers = "^2.6.1"
flask = "^3.0.2"
requests = "^2.31.0"
numpy = "^1.26.4"
scikit-learn = "^1.4.1.post1"
treelib = "^1.7.0"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.8.4"
pandas = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
